--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-API_KEY=your-api-key-here
-ISLAND_NAME="The name of your island"
-HOTEL_NAME="The name of your hotel"
-USER_NAME="Your username"
+API_KEY= fbba8336-24ba-4be8-be7d-caad74441fb7
+ISLAND_NAME="Frosty Island"
+HOTEL_NAME="Nordic Frost Resort"
+USER_NAME="Divjana"
 STARS=2
